--- a/views/pages/ds_must_authenticate.ejs
+++ b/views/pages/ds_must_authenticate.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/head %>
+<% include ../partials/genericHead %>
 
 <div class="jumbotron">
   <h1 class="display-4">Please Authenticate with DocuSign</h1>
@@ -9,4 +9,4 @@
   <p>You need to authenticate with DocuSign to continue your request.</p>
 </div>
 
-<% include ../partials/foot %>
+<% include ../partials/genericFoot %>
