--- a/views/pages/examples/eg005EnvelopeRecipients.ejs
+++ b/views/pages/examples/eg005EnvelopeRecipients.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>5. List an envelope's recipients and their status</h4>
 <p>List the envelope's recipients, including their current status.</p>
@@ -10,7 +10,7 @@
   <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
 </p>
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <% if (envelopeOk) { %>
   <p>The envelope you created via example 2 will be queried.</p>
   
@@ -28,4 +28,4 @@
   </form>
 <% } %>
   
-<% include ../../partials/foot %>
+<% include ../../partials/examplesFoot %>
