--- a/views/pages/examples/eg006EnvelopeDocs.ejs
+++ b/views/pages/examples/eg006EnvelopeDocs.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>6. List an envelope's documents</h4>
 <p>List the envelope's documents. A <i>Certificate of Completion</i> document 
@@ -16,7 +16,7 @@
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/list">EnvelopeDocuments::list</a>.
 </p>
 
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <% if (envelopeOk) { %>
   <p>The envelope you created via example 2 will be queried.</p>
   
@@ -34,4 +34,4 @@
   </form>
 <% } %>
 
-<% include ../../partials/foot %>
+<% include ../../partials/examplesFoot %>
