--- a/views/pages/examples/eg013AddDocToTemplate.ejs
+++ b/views/pages/examples/eg013AddDocToTemplate.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>13. Embedded Signing Ceremony from a template with an added document</h4>
 
@@ -24,7 +24,7 @@
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
 </p>
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <% if (templateOk) { %>
   <p>The template you created via example 8 will be used.</p>
   
@@ -89,4 +89,4 @@
   </form>
 <% } %>
     
-<% include ../../partials/foot %>
+<% include ../../partials/examplesFoot %>
