--- a/views/pages/examples/eg016SetTabValues.ejs
+++ b/views/pages/examples/eg016SetTabValues.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>16. Set tab values for a envelope</h4>
 <p>This example creates an example with both read-only tabs (fields) and tabs that can
@@ -12,7 +12,7 @@
 <p>API method used:
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
       <label for="signerEmail">Signer Email</label>
@@ -30,5 +30,5 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
   
-  <% include ../../partials/foot %>
+  <% include ../../partials/examplesFoot %>
 
