--- a/views/pages/examples/eg017SetTemplateTabValues.ejs
+++ b/views/pages/examples/eg017SetTemplateTabValues.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>17. Set template tab values</h4>
 <p>This example sets the value of a template's tabs. It includes setting
@@ -12,7 +12,7 @@ radio button and checkbox tabs.</p>
 <p>API method used:
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <% if (templateOk) { %>
     <form class="eg" action="" method="post" data-busy="form">
         <div class="form-group">
@@ -51,5 +51,5 @@ radio button and checkbox tabs.</p>
     </form>
     <% } %>
 
-    <% include ../../partials/foot %>
+    <% include ../../partials/examplesFoot %>
     
