--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/head %>
+<% include ../partials/genericHead %>
 
 <% if (! locals.user) { %>
   <!-- IF not signed in -->
@@ -16,66 +16,66 @@
 <div id="index-page">
   <h2>Welcome</h2>
   <p>This launcher both demonstrates use of the OAuth Authorization Code Grant flow and includes multiple usage examples for the DocuSign eSignature REST API.</p>
-  
+
   <% if (showDoc) { %>
     <p><a target='_blank' href='<%= documentation %>'>Documentation</a> on using OAuth Authorization Code Grant from a Node Express application.</p>
   <% } %>
-  
+
   <h2>Basic Examples</h2>
 
   <h4 id="example001">1. <a href="eg001">Embedded Signing Ceremony</a></h4>
-  <p>This example sends an envelope, and then uses an embedded signing ceremony for the first signer. 
+  <p>This example sends an envelope, and then uses an embedded signing ceremony for the first signer.
     With embedded signing, the DocuSign signing ceremony is initiated from your website.
   </p>
-  <p>API methods used: 
-     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
+  <p>API methods used:
+     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
   </p>
 
   <h4 id="example002">2. <a href="eg002">Send an envelope with a remote (email) signer and cc recipient</a></h4>
-  <p>The envelope includes a pdf, Word, and HTML document. Anchor text 
+  <p>The envelope includes a pdf, Word, and HTML document. Anchor text
     (<a target ='_blank' href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
     is used to position the signing fields in the documents.
   </p>
-  <p>API method used: 
+  <p>API method used:
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
   </p>
 
   <h4 id="example003">3. <a href="eg003">List envelopes in the user's account</a></h4>
   <p>List the envelopes created in the last 30 days.
   </p>
-  <p>API method used: 
+  <p>API method used:
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/listStatusChanges">Envelopes::listStatusChanges</a>.
   </p>
 
   <h4 id="example004">4. <a href="eg004">Get an envelope's basic information and status</a></h4>
   <p>List the basic information about an envelope, including its overall status.
-    Additional API/SDK methods may be used to get additional information about the 
+    Additional API/SDK methods may be used to get additional information about the
     envelope, its documents, recipients, etc.
   </p>
-  <p>API method used: 
+  <p>API method used:
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/get">Envelopes::get</a>.
   </p>
 
   <h4 id="example005">5. <a href="eg005">List an envelope's recipients and their status</a></h4>
   <p>List the envelope's recipients, including their current status.
   </p>
-  <p>API method used: 
+  <p>API method used:
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
   </p>
 
   <h4 id="example006">6. <a href="eg006">List an envelope's documents</a></h4>
-  <p>List the envelope's documents. A <i>Certificate of Completion</i> document 
+  <p>List the envelope's documents. A <i>Certificate of Completion</i> document
      is also associated with every envelope.
   </p>
-  <p>API method used: 
+  <p>API method used:
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/list">EnvelopeDocuments::list</a>.
   </p>
 
   <h4 id="example007">7. <a href="eg007">Download a document from an envelope</a></h4>
   <p>An envelope's documents can be downloaded one by one or as a complete set.
   </p>
-  <p>API method used: 
+  <p>API method used:
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/get">EnvelopeDocuments::get</a>.
   </p>
 
@@ -85,21 +85,21 @@
       <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/list">Templates::list</a>,
       <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
   </p>
-  
+
   <h4 id="example009">9. <a href="eg009">Send an envelope using a template</a></h4>
   <p>The envelope is defined by the template.
      The signer and cc recipient name and email are used to fill in the template's <i>roles</i>.</p>
-  <p>API method used: 
+  <p>API method used:
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
   </p>
 
   <h4 id="example010">10. <a href="eg010">Send an envelope using binary document transfer</a></h4>
   <p>The envelope includes a pdf, Word, and HTML document.</p>
-  <p>Multipart data transfer is used to send the documents in binary format to DocuSign. 
+  <p>Multipart data transfer is used to send the documents in binary format to DocuSign.
     Binary transfer is 33% more efficient than base64 encoding and is recommended for documents over 15M Bytes.
     Binary transfer is not yet supported by the SDK.
   </p>
-  <p>API method used: 
+  <p>API method used:
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
   </p>
 
@@ -108,33 +108,33 @@
     web tool (NDSE) will then be shown, enabling further updates
     to the envelope before it is sent.
   </p>
-  <p>API methods used: 
+  <p>API methods used:
     <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>,
     <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createSender">EnvelopeViews::createSender</a>.
 
   <h4 id="example012">12. <a href="eg012">Embedded DocuSign web tool</a></h4>
   <p>Redirect the user to the DocuSign web tool.</p>
-  <p>API method used: 
+  <p>API method used:
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createConsole">EnvelopeViews::createConsole</a>.
-  </p>  
+  </p>
 
   <h4 id="example013">13. <a href="eg013">Embedded Signing Ceremony from a template with an added document</a></h4>
   <p>This example sends an envelope based on a template.</p>
   <p>In addition to the template's document(s), the example adds an
-     additional document to the envelope by using the 
+     additional document to the envelope by using the
      <a target='_blank' href='https://developers.docusign.com/esign-rest-api/guides/features/templates#composite-templates'>Composite Templates</a>
      feature.</p>
-  <p>API methods used: 
-     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
+  <p>API methods used:
+     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
   </p>
 
   <h4 id="example014">14. <a href="eg014">Send an envelope with an order form and payment field</a></h4>
-  <p>Anchor text 
+  <p>Anchor text
     (<a target ='_blank' href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
     is used to position the fields in the documents.
   </p>
-  <p>API method used: 
+  <p>API method used:
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
   </p>
 
@@ -161,13 +161,10 @@
   <p>API method used:
       <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeCustomFields/list">EnvelopeCustomFields::list</a>.
   </p>
-
-
-  
 </div>
 
-<!-- anchor-js is only for the index page -->
+    <!-- anchor-js is only for the index page -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.1/anchor.min.js"></script>
 <script>anchors.options.placement = 'left'; anchors.add('h4')</script>
 
-<% include ../partials/foot %>
+<% include ../partials/genericFoot %>
