--- a/views/pages/ds_return.ejs
+++ b/views/pages/ds_return.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/head %>
+<% include ../partials/genericHead %>
 
 <h2>Returned data from DocuSign!</h2>
 <p>Data:</p>
@@ -22,4 +22,4 @@
 
 <p><a href="/">Continue</a></p>
   
-<% include ../partials/foot %>
+<% include ../partials/genericFoot %>
