--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,5 +1,5 @@
 <% title = "Error" %>
-<% include ../partials/head %>
+<% include ../partials/genericHead %>
 
 <h2>Problem: an error occurred</h2>
 <p>Error information:</p>
@@ -18,4 +18,4 @@
 
 <p><a href="/">Continue</a></p>
   
-<% include ../partials/foot %>
+<% include ../partials/genericFoot %>
