--- a/views/pages/examples/eg008CreateTemplate.ejs
+++ b/views/pages/examples/eg008CreateTemplate.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>8. Create a template</h4>
 <p>Create a template with two roles, <b>signer</b> and <b>cc</b>. 
@@ -20,10 +20,10 @@
     <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
 </p>
 
-<% include ../../partials/sourceChooser %>  
+<% include ../../partials/gitSource %>  
   <form class="eg" action="" method="post" data-busy="form">
       <input type="hidden" name="_csrf" value="<%- csrfToken %>">
       <button type="submit" class="btn btn-primary">Continue</button>
   </form>
   
-<% include ../../partials/foot %>
+<% include ../../partials/examplesFoot %>
