--- a/views/pages/examples/eg009UseTemplate.ejs
+++ b/views/pages/examples/eg009UseTemplate.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>9. Send an envelope using a template</h4>
 <p>The envelope is defined by the template.
@@ -17,7 +17,7 @@
 <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <% if (templateOk) { %>
   <p>The template you created via example 8 will be used.</p>
   
@@ -58,4 +58,4 @@
   </form>
 <% } %>
   
-<% include ../../partials/foot %>
+<% include ../../partials/examplesFoot %>
