--- a/views/pages/examples/eg010SendBinaryDocs.ejs
+++ b/views/pages/examples/eg010SendBinaryDocs.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>10. Send an envelope using binary document transfer</h4>
 <p>The envelope includes a pdf, Word, and HTML document.</p>
@@ -17,7 +17,7 @@ demonstrates how to do so.</p>
   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
 
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
       <label for="signerEmail">Signer Email</label>
@@ -46,4 +46,4 @@ demonstrates how to do so.</p>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
   
-<% include ../../partials/foot %>
+<% include ../../partials/examplesFoot %>
