--- a/views/pages/examples/eg011EmbeddedSending.ejs
+++ b/views/pages/examples/eg011EmbeddedSending.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>11. Embedded Sending</h4>
 <p>An envelope will be created in draft mode. Your browser will then be redirected to 
@@ -23,7 +23,7 @@
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createSender">EnvelopeViews::createSender</a>.
 </p>
 
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
         <label for="startingView">Starting View</label>
@@ -59,4 +59,4 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
   
-<% include ../../partials/foot %>
+<% include ../../partials/examplesFoot %>
