--- a/views/pages/examples/eg012EmbeddedConsole.ejs
+++ b/views/pages/examples/eg012EmbeddedConsole.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>12. Embedded DocuSign web tool</h4>
 <p>Redirect the user to the DocuSign web tool.</p>
@@ -18,7 +18,7 @@
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createConsole">EnvelopeViews::createConsole</a>.
 </p>
 
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <% if (!envelopeOk) { %>
     <p><b>Optional:</b> to use the <i>Envelope's document view</i> please first create an envelope using 
         <a href="eg002">example 2.</a></p>
@@ -37,4 +37,4 @@
     <button type="submit" class="btn btn-primary">Continue</button>
 </form>
   
-<% include ../../partials/foot %>
+<% include ../../partials/examplesFoot %>
