--- a/views/pages/examples/eg014CollectPayment.ejs
+++ b/views/pages/examples/eg014CollectPayment.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>14. Send an envelope with an order form, including a payment field.</h4>
 
@@ -21,7 +21,7 @@
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
 
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <% if (gatewayOk) { %>
   <form class="eg" action="" method="post" data-busy="form">
       <div class="form-group">
@@ -54,5 +54,5 @@
   <p>Problem: please set the <b>DS_PAYMENT_GATEWAY_ID</b> value in the configuration file.</p>
 <% } %>
 
-<% include ../../partials/foot %>
+<% include ../../partials/examplesFoot %>
 
