--- a/views/pages/examples/eg015EnvelopeTabData.ejs
+++ b/views/pages/examples/eg015EnvelopeTabData.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/head %>
+<% include ../../partials/examplesHead %>
 
 <h4>15. Get the tab data from an envelope</h4>
 <p>Get the tab (field) values from an envelope for all of the envelope's recipients.</p>
@@ -16,7 +16,7 @@
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeFormData/get">EnvelopeFormData::get</a>.
 </p>
 
-<% include ../../partials/sourceChooser %>
+<% include ../../partials/gitSource %>
 <% if (envelopeOk) { %>
     <p>The last envelope you created with this example launcher will be queried.
      Recommendation:  use example 9, then this example, since example 9 includes many tabs of different types.</p>
@@ -35,5 +35,5 @@
   </form>
   <% } %>
 
-  <% include ../../partials/foot %>
+  <% include ../../partials/examplesFoot %>
   
