Handle src as text, not html

--- a/views/partials/sourceChooser.ejs
+++ b/views/partials/sourceChooser.ejs
@@ -33,7 +33,7 @@
             <% }) %>
         </div>
         <p id="sourceUrl">Github: <a target="_blank" href='<%= sourceUrl %>'><%= sourceFile %></a>
-        <div id="source"></div>
+        <div><pre class="preWrap"><code id="source"></code></pre></div>
     </div>
 <% } else { %> 
     <p>
