--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,7 +17,8 @@
 
 <div id="index-page">
   <h2>Welcome</h2>
-  <p>This launcher both demonstrates use of the OAuth Authorization Code Grant flow and includes multiple usage examples for the DocuSign eSignature REST API.</p>
+  <p>This launcher both demonstrates use of the OAuth Authorization Code Grant flow and includes multiple workflow
+      examples for the DocuSign eSignature REST API.</p>
 
   <% if (locals.dsConfig.multiSourceChooser) { %>
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
