--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -2,7 +2,7 @@
     <p><a target='_blank' href='<%= documentation %>'>Documentation</a> on using OAuth Authorization Code Grant from a Node Express application.</p>
   <% } %>
 
-  <h3>Code Examples</h3>
+  <h3 class="mt-4">Code Examples for C#, PHP, Java, Node.js, Python, and Curl</h3>
 
   <h4 id="example001">1. <a href="eg001">Embedded Signing Ceremony</a></h4>
   <p>This example sends an envelope, and then uses an embedded signing ceremony for the first signer.
