--- a/views/pages/index_launchers.ejs
+++ b/views/pages/index_launchers.ejs
@@ -1,21 +1,49 @@
-  <h3>Launchers for the code examples</h3>
+  <h3 class="mt-4">Launchers for the code examples</h3>
 
-  <h4>1. <a target ='_blank' href="eg001">C#</a></h4>
-  <p>The C# launcher is a ready to use Visual Studio solution. The launcher's C# code examples can be used
-    with both C# .NET Core and .NET Framework projects.
+  <h4><a target ='_blank' href="https://github.com/docusign/eg-03-csharp-auth-code-grant-core">C#</a></h4>
+  <p>The C# launcher is a ready to use Visual Studio solution. It uses the
+    .NET Core MVC web framework.
+    The launcher's C# code examples can be used
+    with both C# .NET Core and .NET Framework projects, and with the Authorization Code Grant or JWT
+    authentication flow.
   </p>
 
-  <h4>2. <a target ='_blank' href="eg001">C#</a></h4>
-  <p>The C# launcher is a ready to use Visual Studio solution. The launcher's C# code examples can be used
-    with both C# .NET Core and .NET Framework projects.
+  <h4><a target ='_blank' href="https://github.com/docusign/eg-03-php-auth-code-grant-core">PHP</a></h4>
+  <p>The PHP launcher is a ready to use integration. The launcher's PHP code examples can be used
+    with any web server that supports PHP. The examples can be used with the Authorization Code Grant or
+    JWT authentication flow.
   </p>
 
-  <h4>3. <a target ='_blank' href="eg001">C#</a></h4>
-  <p>The C# launcher is a ready to use Visual Studio solution. The launcher's C# code examples can be used
-    with both C# .NET Core and .NET Framework projects.
+  <h4><a target ='_blank' href="https://github.com/docusign/eg-03-java-auth-code-grant-core">Java</a></h4>
+  <p>The Java launcher is a ready to use integration. It uses the Spring Boot web framework.
+    The launcher's code examples can be used with the Authorization Code Grant or
+    JWT authentication flow.
   </p>
 
-  <h4>4. <a target ='_blank' href="eg001">C#</a></h4>
-  <p>The C# launcher is a ready to use Visual Studio solution. The launcher's C# code examples can be used
-    with both C# .NET Core and .NET Framework projects.
+  <h4><a target ='_blank' href="https://github.com/docusign/eg-03-node-auth-code-grant-core">Node.js</a></h4>
+  <p>The Node launcher is a ready to use integration. It uses the Express web framework.
+    The launcher's code examples can be used with the Authorization Code Grant or
+    JWT authentication flow.
   </p>
+
+  <h4><a target ='_blank' href="https://github.com/docusign/eg-03-curl">Curl (API)</a></h4>
+  <p>The Curl launcher is a set of shell scripts that can be used on a Windows, Linux or MacOS computer.
+    The Curl examples don't include authentication. Instead, you can obtain an access token
+    from the
+    <a target="_blank" href="https://developers.docusign.com/oauth-token-generator">OAuth token generator</a>
+    on the Developer Center.
+  </p>
+
+  <h4><a target ='_blank' href="https://github.com/docusign/eg-03-python-auth-code-grant-core">Python</a></h4>
+  <p>The Python 3 launcher is a ready to use integration. It uses the Flask web framework.
+    The launcher's code examples can be used with the Authorization Code Grant or
+    JWT authentication flow.
+  </p>
+
+  <!--
+  <h4><a target ='_blank' href="https://github.com/docusign/eg-03-ruby-auth-code-grant-core">Ruby</a></h4>
+  <p>The Ruby launcher is a ready to use Ruby on Rails integration.
+    The launcher's code examples can be used with the Authorization Code Grant or
+    JWT authentication flow.
+  </p>
+-->
