Updating to Rest API V2.1 + IDV

--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -146,3 +146,34 @@
   <p>API method used:
       <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeCustomFields/list">EnvelopeCustomFields::list</a>.
   </p>
+
+  <h4 id="example019">19. <a href="eg019">Access Code Authentication</a></h4>
+  <p>This is an example of an envelope utilizing Access Code authentication for multi-factor verification of a recipient.</p>
+  <p>API method used:
+   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  </p>
+  
+  <h4 id="example020">20. <a href="eg020">SMS Authentication</a></h4>
+  <p>This is an example of an envelope utilizing SMS authentication for multi-factor verification of a recipient.</p>
+  <p>API method used:
+   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  </p>
+  
+  <h4 id="example021">21. <a href="eg021">Phone Authentication</a></h4>
+  <p>This is an example of an envelope utilizing phone authentication for multi-factor verification of a recipient.</p>
+  <p>API method used:
+   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  </p>
+  
+  <h4 id="example022">22. <a href="eg022">KBA Authentication</a></h4>
+  <p>This is an example of an envelope utilizing Knowledge based authentication for multi-factor verification of a recipient.</p>
+  <p>API method used:
+   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  </p>
+  
+  <h4 id="example023">23. <a href="eg023">IDV Authentication</a></h4>
+  <p>This is an example of an envelope utilizing Id verification authentication for a recipient.</p>
+  <p>API methods used:
+   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Accounts/IdentityVerifications/list">Accounts::getAccountIdentityVerificationsList</a>.
+   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.   
+  </p>
