Added eg024CreateBrand example

--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -177,3 +177,9 @@
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Accounts/IdentityVerifications/list">Accounts::getAccountIdentityVerificationsList</a>.
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.   
   </p>
+
+  <h4 id="example024">24. <a href="eg024">Creating a brand</a></h4>
+  <p>This code example demonstrates how to create a brand with the eSignature REST API. </p>
+  <p>API methods used:
+   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Accounts/AccountBrands/create">AccountBrands::create</a>.  
+  </p>
