Added eg026ApplyBrandToTemplate example

--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -183,3 +183,9 @@
   <p>API methods used:
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Accounts/AccountBrands/create">AccountBrands::create</a>.  
   </p>
+
+  <h4 id="example026">26. <a href="eg026">Applying a brand to a template</a></h4>
+  <p>This code example demonstrates how to apply a brand to a template with the eSignature REST API. </p>
+  <p>API methods used:
+   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.  
+  </p>
