Rebase on Vlad's work

--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -183,3 +183,9 @@
   <p>API methods used:
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Accounts/AccountBrands/create">AccountBrands::create</a>.  
   </p>
+
+  <h4 id="example025">25. <a href="eg025">Applying a brand to an envelope</a></h4>
+  <p>This code example demonstrates how to apply a brand to an envelope with the eSignature REST API.</p>
+  <p>API methods used:
+   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>
+  </p>
