--- a/views/pages/examples/eg025ApplyBrandToEnvelope.ejs
+++ b/views/pages/examples/eg025ApplyBrandToEnvelope.ejs
@@ -1,12 +1,15 @@
 <% include ../../partials/examplesHead %>
 
 <h4>25. Applying a brand to an envelope.</h4>
-<p>The envelope includes a pdf, Word, and HTML document. Anchor text 
-  (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
-  is used to position the signing fields in the documents.
+
+<p>
+    The envelope includes a pdf document. Anchor text
+    (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+    is used to position the signing fields in the documents.
 </p>
-<p>This is a general example of creating and sending an envelope (a signing request) to multiple recipients,
-  with multiple documents, and with signature fields for the documents.</p>
+<p>
+    This code example demonstrates how to apply a brand to an envelope.
+</p>
 
   <% if (showDoc) { %>
     <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
